# ComfyUI-GPENO

./: CHANGELOG.md  README.md  __init__.py  pyproject.toml
.github/workflows/: publish_action.yml
gpeno/: align_faces.py  face_enhancement.py
gpeno/face_detect/: retinaface_detection.py
gpeno/face_detect/data/: config.py  data_augment.py
gpeno/face_detect/facemodels/: retinaface.py
gpeno/face_detect/layers/modules/: multibox_loss.py
gpeno/face_model/: face_gan.py
gpeno/face_parse/: face_parsing.py
